fix layout issue with .helper

--- a/src/renderer/src/App.css
+++ b/src/renderer/src/App.css
@@ -38,5 +38,6 @@ div.helper {
 
 	&>div {
 		max-width: 1040px;
+		align-self: center;
 	}
 }
